# INQUIRO

./: .env.example  .gitattributes  .gitignore  README.md  inquiro_cli.py  pyproject.toml  requirements.txt  run_inquiro.py
config/: __init__.py  settings.py
config/prompts/: __init__.py  academic_paper.py  adaptive_decomposition.py  cross_finding.py  data_agent.py  dataset_search.py  domain_anchors.py  domain_skills.py  gap_analysis.py  lit_agent.py  lit_agent_local.py  objective_analysis.py  orchestrator.py  research_plan.py  synthetic_data.py
data/test_verification/: firm_pricing_data.csv
docker/: Dockerfile.sandbox  docker-compose.yml
notebooks/: 01_world_model_demo.ipynb
skills/code_fix/: SKILL.md  skill_meta.json
skills/code_generation/: SKILL.md  skill_meta.json
skills/code_verification/: SKILL.md  skill_meta.json
skills/completion_check/: SKILL.md  skill_meta.json
skills/conclusion/: SKILL.md  skill_meta.json
skills/dataset_search/: SKILL.md  skill_meta.json
skills/executive_summary/: SKILL.md  skill_meta.json
skills/fallback/: SKILL.md  skill_meta.json
skills/fast/: SKILL.md  skill_meta.json
skills/finding_extraction/: SKILL.md  skill_meta.json
skills/gap_analysis/: SKILL.md  skill_meta.json
skills/literature_extraction/: SKILL.md  (+1 more)
src/: __init__.py  cli.py
tests/: test_all_features.py  test_data_agent_demo.py  test_e2e.py  test_execution.py  test_integration.py  test_latex.py  test_llm_client.py  test_question_driven.py  test_report_validation.py  test_skills.py  test_smoke.py  test_task_skill_integration.py  test_world_model.py
(+181 files in other folders)
